fix: text overflow style

--- a/dev/src/ionic-stepper/ionic-step-header.scss
+++ b/dev/src/ionic-stepper/ionic-step-header.scss
@@ -39,6 +39,11 @@ ion-step-header {
     display: flex;
     align-items: center;
     flex-wrap: wrap;
+    overflow: hidden;
+    outline: 0;
+    cursor: pointer;
+    position: relative;
+    box-sizing: content-box;
     &.mt {
       margin-top: 14px;
     }
